# GOTTA_BIKE_virtual_team_platform

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CMS_plan.md  Dockerfile  LICENSE.md  MEMBERSHIP_PLAN.md  Procfile.tailwind  README.md  TODO.md  build-and-deploy.sh  conftest.py  entrypoint.sh  example_jersey_update.csv  find_orphans.py  manage.py  pyproject.toml  ruff.toml  temp.py
apps/accounts/: adapters.py  admin.py  apps.py  decorators.py  discord_service.py  forms.py  middleware.py  models.py  permission_registry.py  services.py  tasks.py  test_refresh_race_ready.py  test_refresh_zr.py  tests.py  urls.py  utils.py  views.py
apps/accounts/templatetags/: __init__.py  (+1 more)
apps/analytics/: admin.py  api.py  apps.py  models.py  services.py  tests.py  urls.py  views.py
apps/club_strava/: __init__.py  admin.py  apps.py  models.py  strava_client.py  tasks.py  urls.py  views.py
apps/cms/: __init__.py  admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
apps/data_connection/: admin.py  apps.py  forms.py  gs_client.py  models.py  services.py  tasks.py  tests.py  urls.py  views.py
apps/dbot_api/: admin.py  api.py  apps.py  cron_api.py  models.py  tests.py  views.py
apps/events/: admin.py  apps.py  calendar_utils.py  context_processors.py  ds_service.py  forms.py  models.py  squads.py  tasks.py  tests.py  tz_utils.py  urls.py  views.py
apps/ladder_planner/: admin.py  apps.py  models.py  tasks.py  tests.py  urls.py  views.py
apps/magic_links/: admin.py  apps.py  models.py  urls.py  views.py
apps/team/: admin.py  apps.py  context_processors.py  converters.py  forms.py  models.py  services.py  tasks.py  test_expiring_verifications_context.py  test_pvt_power_notification.py  test_race_ready_calc.py  test_race_ready_record.py  test_verification_days_bulk.py  test_verification_types.py  urls.py  views.py
apps/tickets/: admin.py  apps.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
apps/ttt_planner/: __init__.py  admin.py  apps.py  forms.py  models.py  routes_urls.py  tasks.py  terrain.py  test_climb.py  tests.py  urls.py  views.py  worlds.py
apps/user_api/: __init__.py  admin.py  api.py  apps.py  models.py  services.py  tasks.py  urls.py  views.py
apps/zwift/: admin.py  apps.py  client.py  models.py  tests.py  urls.py  utils.py  views.py
apps/zwift_data/: admin.py  apps.py  catalog.py  models.py  tasks.py  tests.py
apps/zwiftpower/: admin.py  apps.py  models.py  tasks.py  tests.py  urls.py  views.py  zp_client.py
apps/zwiftracing/: admin.py  apps.py  models.py  tasks.py  views.py  zr_client.py
docs/: api.md  authentication.md  discord-bot.md  getting-started.md  guild-sync.md  index.md  membership-applications.md  permissions.md  profile-completion.md  race-ready.md
gotta_bike_platform/: admin.py  asgi.py  config.py  context_processors.py  models.py  settings.py  task_registry.py  test_datastar.py  test_healthz.py  urls.py  version.py  views.py  wsgi.py
gotta_bike_platform/migrations/: 0001_site_settings.py  0002_add_favicon.py  0003_add_verification_emojis.py  0004_add_zp_category_emojis.py  0005_add_zr_category_emojis.py  0006_add_zp_a_plus_emoji.py  0007_sitesettings_phenotype_allrounder_emoji_and_more.py  0008_sitesettings_phenotype_pursuiter_emoji.py  0009_sitesettings_new_member_icon.py
plans/: permissions_sitemap.md
templates/: 403.html  _climb_method.html  about.html  help.html  help_edit.html  index.html
templates/account/: base.html  login.html  logout.html
templates/accounts/: _user_tooltip.html  config_section_page.html  config_settings.html  import_application.html  profile.html  profile_delete.html  profile_edit.html  public_profile.html  verification.html
templates/analytics/: dashboard.html
templates/club_strava/: activity_list.html
templates/cms/: page_delete.html  page_detail.html  page_form.html  page_list.html
templates/data_connection/: connection_confirm_delete.html  connection_form.html  connection_list.html
templates/events/: _eligibility_table.html  _event_role_cell.html  _filter_select_script.html  _participation_report.html  _role_badges.html  _scheduled_race_card.html  _slot_ds_list.html  _slot_ds_results.html  _slot_selections_container.html  _squad_captain_role_cell.html  _squad_cell.html  _squad_manage_panel.html  _squad_panel.html  _squad_role_cell.html  all_scheduled_races.html  availability_builder.html  availability_respond.html  availability_results.html  event_all_races.html  event_detail.html  event_form.html  event_list.html  event_racing_report.html  event_role_setup.html  manage_roles.html  my_events.html  squad_assign.html  squad_availability.html  squad_form.html  squad_invite.html  squad_manage.html  squad_v_report.html
templates/mfa/: authenticate.html  index.html
templates/socialaccount/: authentication_error.html  login_cancelled.html
templates/team/: application_admin.html  application_list.html  application_public.html  discord_review.html  edit_link.html  links.html  membership_review.html  performance_review.html  roster.html  roster_filter_expired.html  submit_link.html  team_feed.html  verification_record_detail.html  verification_records.html  youtube_channels.html
templates/tickets/: ticket_detail.html  ticket_form.html  ticket_list.html
templates/user_api/: api_keys.html
templates/zwift/: zauth.html
templates/zwiftpower/: _sort_link.html  event_results.html  team_results.html
theme/: apps.py
theme/static_src/: package-lock.json  package.json
theme/templates/: base.html  footer.html  header.html  sidebar.html
(+298 files in other folders)
