[project]
name = "GOTTA-BIKE_virtual-team-app"
version = "0.1.0"
description = "App and discord bot for managing zwift virtual cycling teams."
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.83",
    "dj-database-url>=3.1.2",
    "django>=6.0.5",
    "django-allauth[mfa,socialaccount]>=65.15.1",
    "django-constance>=4.3.5",
    "django-cors-headers>=4.9.0",
    "django-countries>=8.2.0",
    "django-htmx>=1.27.0",
    "django-ninja>=1.6.2",
    "django-ratelimit>=4.1",
    "django-simple-history>=3.11.0",
    "django-storages>=1.14.6",
    "django-tailwind[honcho]>=4.4.2",
    "django-tasks>=0.12.0",
    "django-tasks-db>=0.12.0",
    "google-api-python-client>=2.194.0",
    "google-auth>=2.49.1",
    "granian>=2.7.2",
    "gspread>=6.2.1",
    "honcho>=2.0.0",
    "httpx>=0.28.1",
    "justhtml>=1.18.0",
    "logfire[asgi,django,psycopg,httpx]>=4.33.0",
    "markdown>=3.10.2",
    "pillow>=12.1.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "django-tailwind[cookiecutter,honcho,reload]",
    "django-browser-reload>=1.21.0",
    "django-debug-toolbar>=6.1.0",
    "django-reset-migrations>=0.4.0",
    "django-stubs>=5.2.8",
    "pytest>=9.0.3",
    "pytest-django>=4.11.1",
    "ruff>=0.15.12",
    "ty>=0.0.34",
    "logfire-mcp>=0.6.0"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "gotta_bike_platform.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["apps", "gotta_bike_platform"]
addopts = [
    "--strict-markers",
    "--reuse-db",
    # Tables are created from current model state instead of replaying migrations.
    # Bypasses a latent fresh-DB bug in apps/accounts/migrations/0013 (the data
    # migration loads the live User model, which selects columns added in later
    # migrations). See TODO.md.
    "--no-migrations",
]
filterwarnings = [
    "ignore::DeprecationWarning:allauth.*",
]
