[project]
name = "GOTTA-BIKE_virtual-team-app"
version = "0.1.0"
description = "App and discord bot for managing zwift virtual cycling teams."
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.3",
    "beautifulsoup4>=4.15.0",
    "boto3>=1.43.52",
    "datastar-py>=1.0.2",
    "dj-database-url>=3.1.2",
    "django>=6.0.7",
    "django-allauth[mfa,socialaccount]>=65.18.0",
    "django-constance>=4.3.5",
    "django-cors-headers>=4.9.0",
    "django-countries>=9.0.0",
    "django-htmx>=1.28.0",
    "django-ninja>=1.6.2",
    "django-ratelimit>=4.1.0",
    "django-simple-history>=3.12.0",
    "django-storages>=1.14.6",
    "django-tailwind[honcho]>=4.5.0",
    "django-tasks>=0.12.0",
    "django-tasks-db>=0.12.0",
    "google-api-python-client>=2.198.0",
    "google-auth>=2.56.0",
    "granian>=2.7.9",
    "gspread>=6.2.1",
    "honcho>=2.0.0",
    "httpx>=0.28.1",
    "justhtml>=3.9.0",
    "logfire[asgi,django,psycopg,httpx]>=4.38.0",
    "markdown>=3.10.2",
    "pillow>=12.3.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "django-tailwind[cookiecutter,honcho,reload]",
    "django-browser-reload>=1.21.0",
    "django-debug-toolbar>=7.0.0",
    "django-reset-migrations>=0.4.0",
    "django-stubs>=6.0.7",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "ruff>=0.15.22",
    "ty>=0.0.61",
    "logfire-mcp>=0.9.0"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "gotta_bike_platform.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["apps", "gotta_bike_platform"]
addopts = [
    "--strict-markers",
    "--reuse-db",
    # Tables are created from current model state instead of replaying migrations.
    # Bypasses a latent fresh-DB bug in apps/accounts/migrations/0013 (the data
    # migration loads the live User model, which selects columns added in later
    # migrations). See TODO.md.
    "--no-migrations",
]
filterwarnings = [
    "ignore::DeprecationWarning:allauth.*",
]
